packages/scaml.1.2.0~pre7/tests/fail/op_self2.ml
(* MUST_FAIL *)
open SCaml

let main () () =
  [Operation.transfer_tokens (Int 1) (Tz 0.) Contract.self],
  ()
